eks_cicd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: books
    app.kubernetes.io/instance: books-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: books-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - image: 737971166371.dkr.ecr.us-east-1.amazonaws.com/books:latest
          imagePullPolicy: Always
          name: books
          ports:
            - containerPort: 7000
