eks_cicd/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"

      port:
        number: 80
        name: http
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-service
  namespace: demo
spec:
  hosts: reviews.prod.svc.cluster.local
  gateways:
  - service-gateway
  http:
  - match:
      - uri:
          prefix: "/books"
 
    route:
      - destination:
          host: books
          port:
            number: 5000
